# linux-conf-au-2019-epaper-badge

./: Cargo.toml  LICENSE  README.md  lca2019.service
scripts/: build-and-copy-to-pi
src/: app.rs  ferris.txt  hardware.rs  hi.txt  main.rs  system.rs  webserver.rs
templates/: hi.html  hi.txt
