[package]
name = "lca2019"
version = "0.1.0"
authors = ["Wesley Moore <wes@wezm.net>"]
edition = "2018"

[dependencies]
askama = "0.7"
embedded-graphics = "0.4"
linux-embedded-hal = "0.2"
profont = "0.1"
ssd1675 = "0.1"
structopt = "0.2"
systemstat = "0.1"
tiny_http = "0.6"

[build-dependencies]
askama = "0.7"

[profile.release]
lto = true
codegen-units = 1
