[package]
name = "lca2019"
version = "0.1.0"
authors = ["Wesley Moore <wes@wezm.net>"]
edition = "2018"

[dependencies]
askama = "0.7"
embedded-graphics = "0.4"
linux-embedded-hal = "0.2"
nix = "0.11"
rs-release = "0.1"
profont = "0.1"
memmem = "0.1"
qrcode = { version = "0.9", default-features = false }
ssd1675 = { version = "0.1", git = "https://github.com/wezm/ssd1675.git", branch = "busy-wait" }
structopt = "0.2"
systemstat = { version = "0.1", git ="https://github.com/wezm/systemstat.git", branch = "upgrade-bytesize" }
hyper = "0.12.20"
futures = "0.1"
tokio = "<= 1.0"

[build-dependencies]
askama = "0.7"

[profile.release]
lto = true
codegen-units = 1
